--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -1,5 +1,4 @@
 .bg-section {
-
     padding-top: 4%;
     padding-bottom: 4%;
 }
@@ -99,6 +98,7 @@
     padding-left: 44px;
     padding-right: 10px;
 } */
+
 .left-box P {
     margin-bottom: 15px;
     text-align: left;
@@ -132,21 +132,14 @@ ul.navbar-nav {
     justify-content: center;
 }
 
-
-
-
 .team-d p {
     margin-bottom: 10px;
     font-size: 20px;
     margin-top: 30px;
 }
 
-
-
-
-
-
 /*team      */
+
 .team-in {
     margin-bottom: 50px;
 }
@@ -162,8 +155,6 @@ ul.navbar-nav {
     overflow: hidden;
     position: relative;
 }
-
-
 
 .our-team img {
     width: 100%;
@@ -235,12 +226,8 @@ ul.navbar-nav {
 .our-team .post {
     display: block;
     font-size: 14px;
-    color:#e62e58;
+    color: #e62e58;
 }
-
-
-
-
 
 .roadmap_list li {
     position: relative;
@@ -248,6 +235,7 @@ ul.navbar-nav {
     margin: 0;
     padding-bottom: 40px;
 }
+
 .roadmap_list li:before {
     content: "";
     background: #E5E5E5;
@@ -257,6 +245,7 @@ ul.navbar-nav {
     left: 0;
     top: 0;
 }
+
 small.circle {
     position: absolute;
     left: -11px;
@@ -268,6 +257,7 @@ small.circle {
     border-radius: 50%;
     z-index: 1;
 }
+
 .roadmap_list li span {
     font-style: normal;
     font-weight: 500;
@@ -279,17 +269,21 @@ small.circle {
     left: 40px;
     top: 0;
 }
+
 .roadmap_list li p {
     font-weight: 300;
     font-size: 15px;
     line-height: 22px;
 }
+
 .About_user {
     padding: 0 40px;
 }
+
 .About_user .content_text_block {
     border-radius: 30px;
 }
+
 .About_user .content_text_block p {
     font-style: normal;
     font-weight: 500;
@@ -299,6 +293,7 @@ small.circle {
     text-align: center;
     padding: 45px 100px;
 }
+
 .content_text_block, .content_text_block p.white-text {
     color: #000;
 }
@@ -306,10 +301,12 @@ small.circle {
 .blue_bg {
     background: #000643;
 }
+
 .Roadmap_block_3 .content_text_block p {
     font-size: 16px;
     line-height: 28px;
 }
+
 .content_text_block p {
     font-style: normal;
     font-size: 16px;
@@ -317,14 +314,17 @@ small.circle {
     color: #151b31;
     margin-bottom: 30px;
 }
+
 .Roadmap_block_3 .card {
     margin: 0 0 15px;
     border: none;
     border-radius: 10px;
 }
+
 .accordion>.card {
     overflow: hidden;
 }
+
 .card {
     position: relative;
     display: -ms-flexbox;
@@ -335,10 +335,11 @@ small.circle {
     word-wrap: break-word;
     background-color: #e82d5a;
     background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
     color: #fff;
 }
+
 .collapse:not(.show) {
     display: none;
 }
@@ -357,7 +358,8 @@ small.circle {
     text-align: center;
     color: #E73059;
 }
-.roadmap_page_products p{
+
+.roadmap_page_products p {
     color: #fff;
 }
 
@@ -367,9 +369,11 @@ small.circle {
     padding: 0 15px;
     margin: 0 auto 30px;
 }
+
 .lpnt_journy {
     position: relative;
 }
+
 .journey-year {
     width: 164px;
     height: 164px;
@@ -379,6 +383,7 @@ small.circle {
     padding: 25px 23px;
     margin: 0 auto;
 }
+
 .journey-year span {
     width: 114px;
     height: 114px;
@@ -394,31 +399,38 @@ small.circle {
     position: relative;
     z-index: 3;
 }
+
 .journey_content h5 {
     font-weight: 600;
     font-size: 14px;
     line-height: 172.5%;
     color: #000000;
 }
-.white-text{
-    color:#fff;
+
+.white-text {
+    color: #fff;
 }
+
 .white-text p {
     color: #fff;
 }
+
 .white-text h5 {
     color: #fff;
 }
+
 ul.journey_content {
     display: flex;
     flex-wrap: wrap;
 }
+
 .journey_content h5 {
     font-weight: 600;
     font-size: 14px;
     line-height: 172.5%;
     color: #000000;
 }
+
 .j_ques, .j_ques_right {
     position: relative;
     background: #FFFFFF;
@@ -427,6 +439,7 @@ ul.journey_content {
     padding: 18px;
     margin-bottom: 70px;
 }
+
 .journey-year:before {
     content: "";
     background: #E6E6E6;
@@ -439,7 +452,6 @@ ul.journey_content {
     margin: 0 auto;
     z-index: 0;
 }
-
 
 ul.journey_content li li {
     font-weight: 500;
@@ -455,6 +467,7 @@ ul.journey_content li span {
     position: absolute;
     left: 0;
 }
+
 .j_ques:after, .j_ques:before {
     left: 100%;
     top: 50%;
@@ -463,56 +476,50 @@ ul.journey_content li span {
     height: 0;
     width: 0;
     position: absolute;
-    pointer-events: none;}
+    pointer-events: none;
+}
 
+.j_ques, .j_ques_right {
+    position: relative;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    padding: 18px;
+    margin-bottom: 70px;
+}
 
+.journey-year.purple_bg span {
+    background: #263673;
+}
 
- 
-    .j_ques, .j_ques_right {
-        position: relative;
-        background: #FFFFFF;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-        border-radius: 12px;
-        padding: 18px;
-        margin-bottom: 70px;
-    }
+.journey-year.green_bg span {
+    background: #00928c;
+}
 
+.journey-year {
+    width: 164px;
+    height: 164px;
+    border: 2px solid #E73059;
+    box-sizing: border-box;
+    border-radius: 50%;
+    padding: 25px 23px;
+    margin: 0 auto;
+}
 
+.j_ques, .j_ques_right {
+    width: 95%;
+}
 
-    .journey-year.purple_bg span {
-        background: #263673;
-    }
-    .journey-year.green_bg span {
-        background: #00928c;
-    }
+.j_ques, .j_ques_right {
+    position: relative;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    padding: 18px;
+    margin-bottom: 70px;
+}
 
-    .journey-year {
-        width: 164px;
-        height: 164px;
-        border: 2px solid #E73059;
-        box-sizing: border-box;
-        border-radius: 50%;
-        padding: 25px 23px;
-        margin: 0 auto;
-    }
-    .j_ques, .j_ques_right {
-        width: 95%;
-    }
-    .j_ques, .j_ques_right {
-        position: relative;
-        background: #FFFFFF;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-        border-radius: 12px;
-        padding: 18px;
-        margin-bottom: 70px;
-    }
-
-
-
-
-
-.contact_info li
-{
+.contact_info li {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -520,24 +527,30 @@ ul.journey_content li span {
     text-align: center;
 }
 
-#contact form{
+#contact form {
     border-right: 1px solid #e82c59;
     padding-right: 20px;
 }
 
 
-@media only screen and (max-width: 990px){
-    .our-team{ margin-bottom: 30px; }
-    color: #e62e58;
+#contact .row{
+    align-items: center;
 }
+
+.team_info h4 {
+    color: #fff;
+    font-size: 20px;
+}
+
+
+
 
 @media only screen and (max-width: 990px) {
     .our-team {
         margin-bottom: 30px;
+        color: #e62e58;
     }
-
     .navbar {
         padding: 0;
     }
-
 }
