--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -611,7 +611,12 @@ ul.journey_content li span {
     margin-bottom: 10px;
 }
 
-
+#terms ul li i {
+    font-size: 10px;
+}
+#terms ul li {
+    margin-bottom: 7px;
+}
 
 @media only screen and (max-width: 990px) {
     .our-team {
