--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -910,16 +910,16 @@ button:focus {
 .scrollup {
 	background-color: #333333;
 	border-radius: 100%;
-	bottom: 20px;
+	bottom: 123px;
 	color: #ffffff;
 	font-size: 30px;
 	height: 50px;
 	line-height: 50px;
 	position: fixed;
-	right: 20px;
+	right: 32px;
 	text-align: center;
 	width: 50px;
-	z-index: 99;
+	z-index: 9999999;
 }
 
 .scrollup:hover {
